k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-api
      role: express-api
  template:
    metadata:
      labels:
        app: express-api
        role: express-api
    spec:
      containers:
      - image: nginx:1.21.6
        name: express-api
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
